--- a/.github/workflows/r_func.yml
+++ b/.github/workflows/r_func.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   run_docker_image:
     runs-on: ubuntu-latest
-    container: ghcr.io/nolcut/ga-rpc-python:0.1.6
+    container: ghcr.io/nolcut/ga-rpc-python-r:0.1.6
     env:
       SECRET_PAYLOAD: ${{ secrets.SECRET_PAYLOAD }}
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
