--- a/.github/workflows/add_operation.yml
+++ b/.github/workflows/add_operation.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     container: ghcr.io/nolcut/ga-rpc-python:0.1.6
     env:
+      TOKEN: ${{ secrets.TOKEN }}
       SECRET_PAYLOAD: ${{ secrets.SECRET_PAYLOAD }}
       OVERWRITTEN: ${{ github.event.inputs.OVERWRITTEN }}
       PAYLOAD_URL: ${{ github.event.inputs.PAYLOAD_URL }}
