--- a/.github/workflows/r_func.yml
+++ b/.github/workflows/r_func.yml
@@ -11,8 +11,9 @@ on:
 jobs:
   run_docker_image:
     runs-on: ubuntu-latest
-    container: ghcr.io/nolcut/ga-rpc-python-r:0.1.6
+    container: ghcr.io/nolcut/ga-rpc-python:0.1.6
     env:
+      TOKEN: ${{ secrets.TOKEN }}
       SECRET_PAYLOAD: ${{ secrets.SECRET_PAYLOAD }}
       OVERWRITTEN: ${{ github.event.inputs.OVERWRITTEN }}
       PAYLOAD_URL: ${{ github.event.inputs.PAYLOAD_URL }}
