--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   run_docker_image:
     runs-on: ubuntu-latest
-    container: ghcr.io/nolcut/ga-rpc-python:0.1.7
+    container: ghcr.io/nolcut/ga-rpc-python:dev
     env:
       TOKEN: ${{ secrets.TOKEN }}
       SECRET_PAYLOAD: ${{ secrets.SECRET_PAYLOAD }}
