--- a/.github/workflows/folders.yml
+++ b/.github/workflows/folders.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   run_docker_image:
     runs-on: ubuntu-latest
-    container: ghcr.io/nolcut/ga-rpc-python:new-schema
+    container: ghcr.io/nolcut/ga-rpc-python:dev
     env:
       TOKEN: ${{ secrets.TOKEN }}
       SECRET_PAYLOAD: ${{ secrets.SECRET_PAYLOAD }}
